--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,31 @@ img {
 /* COMMON */
 
 .container {
-    max-width: 80%;
+    width: 80%;
     margin: 0 auto;
     /* debug */
+    border: 1px solid black;
+}
+
+.flex-container {
+    display: flex;
+    /* debug */
+    background-color: lightcoral height: 400px;
+    border: 1px solid black;
+}
+
+/* HEADER  */
+.header {
+    /* debug */
+    background-color: lightgreen;
+    height: 80px;
+    border: 1px solid black;
+}
+
+/* FOOTER */
+/* debug*/
+.footer {
+    background-color: lightgreen;
+    height: 80px;
     border: 1px solid black;
 }
