--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* debug */
+    /* border: 1px dashed fuchsia; */
 }
 
 img {
@@ -17,20 +19,77 @@ ul {
 /* COMMON */
 
 .container {
+
     width: 80%;
-    margin: 0 auto;
+    margin: 0px auto;
     /* debug */
-    border: 1px solid black;
-    height: 80px;
+    border: 1px dashed black;
+    height: 100%;
+}
+
+.main {
+    height: 200px;
+}
+
+.main-container {
+    width: 80%;
+    /* padding: 30px; */
+    margin: 10px auto;
+    /* debug */
+    border: 1px dashed black;
+    height: 100%;
 }
 
 .flex {
     display: flex;
     flex-direction: row;
     /* debug */
-    background-color: lightcoral;
-    border: 1px solid black;
+    /* background-color: lightcoral;
+    border: 1px solid black; */
 }
+
+/* UTILITIES */
+
+/* backgrounds */
+.bg-white {
+    background-color: white;
+}
+
+.bg-grey {
+    background-color: grey;
+}
+
+.bg-dgreen{
+    background-color: darkgreen;
+}
+/* paddings */
+.p-30 {
+    padding-bottom: 30px;
+    padding-top: 30px;
+}
+/* heights */
+.h-350{
+    height: 350px;
+}
+
+.h200{
+    height: 200px;
+}
+
+/* width */
+.w-30 {
+    width: 30%;
+}
+
+.w-70 {
+    width: 70%;
+}
+
+/* flex propreties */
+.row-reverse {
+    flex-direction: row-reverse;
+}
+
 
 
 
@@ -98,12 +157,67 @@ ul {
 
 /* CREO MAIN */
 
+.two-col-1 {
+    width: 40%;
+    background: lightpink;
+    border: 1px dashed black;
+}
+
+.two-col-2 {
+    width: 60%;
+    background: lightblue;
+}
+
 
 /* FOOTER */
 /* debug*/
-.footer {
-    background-color: lightgreen;
-    height: 80px;
-    border: 1px solid black;
-    margin-top: 30px;
+footer {
+    background-color: black;
+    /* height: 200px; */
+    color: white;
+    /* border: 1px solid rgb(222, 97, 97); */
+    margin-top: 0px;
+    height: 100%;
+}
+
+.footer-top {
+    padding-bottom:10px;
+    margin-top: 10px;
+    margin-bottom:10px;
+    border-bottom: 1px solid white;
+    height: 300px;
+    /* border:1px dashed white; */
+
+
+}
+
+.col-left{
+    background-color: rgb(214, 139, 152);
+    border: 1px dashed black;
+}
+
+.col-right {
+    background-color: lightblue;
+}
+
+.col-right>* {
+    flex-grow: 1;
+    border: 1px dashed white;
+}
+
+.footer-bottom {
+    background-color: aquamarine;
+    height:40px;
+    justify-content: space-between;
+    align-items: center;
+    padding-top:10px;
+    padding-bottom: 10px;
+    margin-top:10px;
+}
+
+.footer-bottom>*{
+    background-color: pink;
+    color: black;
+    border:1px dashed black;
+
 }
