--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,10 @@ ul {
     width: 70%;
 }
 
+/* borders */
+.border {
+border: 1px dashed black;
+}
 /* flex propreties */
 .row-reverse {
     flex-direction: row-reverse;
@@ -96,21 +100,20 @@ ul {
 /* HEADER  */
 /* Creo header */
 .header {
-    /* debug */
-    margin: 0;
     background-color: lightskyblue;
-    /* height: 80px; */
-    /* border: 1px solid black; */
+    padding-top:10px;
+    padding-bottom: 10px;
 }
 
 /* creo barra di navigazione */
 .nav-container {
-    width: 60%;
+    background-color: orange;
+    justify-content: space-between;
+    align-items: center;
+    /* width: 80%; */
     margin: 0 auto;
-    padding: 15px;
-    /* debug */
-    /* border: 1px solid black; */
-    /* height:80px; */
+    /* padding: 15px; */
+    border:1px dashed black;
 }
 
 .flex-nav {
@@ -118,24 +121,28 @@ ul {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    /* debug */
     background-color: rgb(255, 165, 0);
-    /* border: 1px solid black; */
-    /* height: 100%; */
+    border: 1px dashed black;
+   
 }
 
 .logo {
+    flex-basis: 20%;
     padding: 10px;
+    border:1px dashed black;
 }
 
 .login {
+    flex-basis: 20%;
     padding: 10px;
 }
 
 .link-container a {
+    flex-basis: 60%;
     margin-right: 5px;
     text-decoration: none;
     color: black;
+    /* border: 1px dashed black; */
 }
 
 /* CREO SEZIONE IN EVIDENZA */
