--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* debug */
-    /* border: 1px dashed fuchsia; */
 }
 
 img {
@@ -22,9 +20,7 @@ ul {
 
     width: 80%;
     margin: 0px auto;
-    /* debug */
-    border: 1px dashed black;
-    height: 100%;
+    border:1px dashed black;
 }
 
 .main {
@@ -33,9 +29,7 @@ ul {
 
 .main-container {
     width: 80%;
-    /* padding: 30px; */
     margin: 10px auto;
-    /* debug */
     border: 1px dashed black;
     height: 100%;
 }
@@ -43,9 +37,6 @@ ul {
 .flex {
     display: flex;
     flex-direction: row;
-    /* debug */
-    /* background-color: lightcoral;
-    border: 1px solid black; */
 }
 
 /* UTILITIES */
@@ -110,9 +101,7 @@ border: 1px dashed black;
     background-color: orange;
     justify-content: space-between;
     align-items: center;
-    /* width: 80%; */
     margin: 0 auto;
-    /* padding: 15px; */
     border:1px dashed black;
 }
 
@@ -129,12 +118,18 @@ border: 1px dashed black;
 .logo {
     flex-basis: 20%;
     padding: 10px;
-    border:1px dashed black;
+    padding-left: 0px;
+    border: 1px dashed black;
+    text-align: left;
+   
 }
 
 .login {
     flex-basis: 20%;
     padding: 10px;
+    padding-right: 0px;
+    text-align: right;
+    border: 1px dashed black;
 }
 
 .link-container a {
@@ -142,7 +137,6 @@ border: 1px dashed black;
     margin-right: 5px;
     text-decoration: none;
     color: black;
-    /* border: 1px dashed black; */
 }
 
 /* CREO SEZIONE IN EVIDENZA */
@@ -159,7 +153,6 @@ border: 1px dashed black;
     width: 60%;
     height: 150px;
     background-color: fuchsia;
-    /* border:1px solid pink; */
 }
 
 /* CREO MAIN */
@@ -177,12 +170,9 @@ border: 1px dashed black;
 
 
 /* FOOTER */
-/* debug*/
 footer {
     background-color: black;
-    /* height: 200px; */
     color: white;
-    /* border: 1px solid rgb(222, 97, 97); */
     margin-top: 0px;
     height: 100%;
 }
@@ -193,9 +183,6 @@ footer {
     margin-bottom:10px;
     border-bottom: 1px solid white;
     height: 300px;
-    /* border:1px dashed white; */
-
-
 }
 
 .col-left{
